user specific functionality added
