# backend/routes/dishRoutes.js
@@ -9,6 +9,7 @@ router.get('/dishes/:id', dishController.getDishById);
 router.post('/suggest', dishController.suggestDishes);
 router.get('/ingredients', dishController.getAllIngredients);
 router.get('/search', dishController.searchDishes);
-
+router.post('/addDish', auth, dishController.addDish);
+router.get('/my-dishes', auth, dishController.getDishesByUserId);
 
 module.exports = router;
